# blockchain-indexer

./: .env.example  .gitignore  Cargo.toml  LICENSE  docker-compose.yml
config/: config.yaml
migrations/: 1766060864_create_users.up.sql  1766060914_create_evm_logs_table.down.sql  1766062514_create_chains.up.sql  1766062699_unique_index.down.sql  1766062699_unique_index.up.sql  20251218195205_create_users.down.sql  20251218195235_create_evm_logs_table.up.sql  20251218195256_create_chains.down.sql  20251218195339_create_sync_logs_table.down.sql  20251218195339_create_sync_logs_table.up.sql
src/: lib.rs
src/config/: mod.rs
src/infrastructure/: mod.rs
src/infrastructure/abi/: abi_loader.rs  mod.rs
src/infrastructure/blockchain/: provider.rs
src/infrastructure/contracts/: alloy_contract_handler.rs  contract_registry.rs  mod.rs
src/infrastructure/contracts/uniswap/: mod.rs
src/infrastructure/database/: pgsql.rs
src/services/: mod.rs
src/services/delivery/event/: evm_log_listener.rs  mod.rs
src/services/dtos/: index_engine.rs  mod.rs
src/services/entities/: evm_chains.rs  evm_logs.rs  evm_sync_logs.rs  mod.rs
src/services/repository/: errors.rs  interfaces.rs  mod.rs
src/services/repository/evm_chains/: evm_chain_repository.rs  mod.rs
src/services/repository/evm_logs/: evm_log_repository.rs  mod.rs
src/services/repository/evm_sync_logs/: evm_sync_logs.rs  mod.rs
src/services/usecase/: errors.rs  mod.rs
src/services/usecase/index_engine/: index_engine_uc.rs  mod.rs
src/services/usecase/index_logs/: index_log_uc.rs  mod.rs
src/utils/: mod.rs
