[package]
name = "blockchain-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio","postgres","macros","uuid","chrono"] }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
serde-value = "0.7"
envy = "0.4"
once_cell = "1.19"
config = "0.14"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4.42"
async-trait = "~0.1"
thiserror = "1.0"

