[package]
name = "blockchain-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio","postgres","macros","uuid","chrono","bigdecimal"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
alloy = { version = "0.7.2", features = ["full"] }
tower = { version = '0.5.1', features = ["limit", "util"] }
dotenvy = "0.15"
serde-value = "0.7"
serde_json = '1.0.133'
envy = "0.4"
once_cell = "1.19"
config = "0.14"
clap = { version = "4.5", features = ["derive"] }
async-trait = "~0.1"
thiserror = "1.0"
tempfile = "3.23.0"
futures = "0.3"


